--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@types/express": "^4.17.16",
     "@types/mongoose": "^5.11.97",
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.0",
     "rimraf": "^4.1.2",
     "tsc": "^2.0.4",
     "tsc-watch": "^6.0.0",
